init updated for e2cloud

--- a/dockerfiles/init/modules/artik/templates/artik.env.erb
+++ b/dockerfiles/init/modules/artik/templates/artik.env.erb
@@ -5,26 +5,26 @@
 <% end -%>
 <% end -%>
 
-# Include all custom ARTIK_* properties that user may has defined in its artik.env file
+# Include all custom E2CLOUD_* properties that user may has defined in its e2cloud.env file
 <% ENV.each do |k,v| -%>
-<% if k.include? "ARTIK_" then  -%>
+<% if k.include? "E2CLOUD_" then  -%>
 <%= k + '=' + v %>
 <% end -%>
 <% end -%>
 
 
-CHE_IP=<%= scope.lookupvar('artik::che_ip') %>
-CHE_PORT=<%= scope.lookupvar('artik::che_port') %>
+CHE_IP=<%= scope.lookupvar('e2cloud::che_ip') %>
+CHE_PORT=<%= scope.lookupvar('e2cloud::che_port') %>
 CHE_LOGS_DIR=/logs
-#DOCKER_HOST=<%= scope.lookupvar('artik::docker_host') %>
-#DOCKER_MACHINE_HOST=<%= scope.lookupvar('artik::docker_ip') %>
+#DOCKER_HOST=<%= scope.lookupvar('e2cloud::docker_host') %>
+#DOCKER_MACHINE_HOST=<%= scope.lookupvar('e2cloud::docker_ip') %>
 
-<% if scope.lookupvar('artik::che_env') != "production" -%>
+<% if scope.lookupvar('e2cloud::che_env') != "production" -%>
 JPDA=jpda
-CHE_ASSEMBLY=<%= scope.lookupvar('artik::che_assembly') %>
+CHE_ASSEMBLY=<%= scope.lookupvar('e2cloud::che_assembly') %>
 CHE_LOG_LEVEL=debug
-JPDA_ADDRESS=<%= scope.lookupvar('artik::che_debug_port') %>
-<% if scope.lookupvar('artik::che_debug_suspend') == "true" %>JPDA_SUSPEND=y<% end -%>
+JPDA_ADDRESS=<%= scope.lookupvar('e2cloud::che_debug_port') %>
+<% if scope.lookupvar('e2cloud::che_debug_suspend') == "true" %>JPDA_SUSPEND=y<% end -%>
 <% end %>
 
 CHE_DATABASE=/data
@@ -34,6 +34,6 @@ CHE_TEMPLATE_STORAGE=/data/templates
 CHE_STACKS_STORAGE=/data/stacks/stacks.json
 CHE_STACKS_IMAGES=/data/stacks/images
 
-CHE_WORKSPACE_TERMINAL__LINUX__AMD64=<%= scope.lookupvar('artik::che_instance') %>/data/lib/linux_amd64/terminal
-CHE_WORKSPACE_TERMINAL__LINUX__ARM7=<%= scope.lookupvar('artik::che_instance') %>/data/lib/linux_arm7/terminal
-CHE_WORKSPACE_AGENT_DEV=<%= scope.lookupvar('artik::che_instance') %>/data/lib/ws-agent.tar.gz
+CHE_WORKSPACE_TERMINAL__LINUX__AMD64=<%= scope.lookupvar('e2cloud::che_instance') %>/data/lib/linux_amd64/terminal
+CHE_WORKSPACE_TERMINAL__LINUX__ARM7=<%= scope.lookupvar('e2cloud::che_instance') %>/data/lib/linux_arm7/terminal
+CHE_WORKSPACE_AGENT_DEV=<%= scope.lookupvar('e2cloud::che_instance') %>/data/lib/ws-agent.tar.gz
